Improve formatting in kafkaToDB documentation for clarity and consistency